# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  13 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Fix for empty
  categories/portage-tree causing a traceback.
	
*portage-2.0.51_pre23 (11 Sep 2004): Fixes and stuff.

  11 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Another fix
  to the virtuals/use code -- It wasn't using treeVirtuals.

*portage-2.0.51_pre22 (11 Sep 2004): Fixes and stuff.

  11 Sep 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Fixed breakage
  in cacheddir changes upon stat'ing a broken symlink.

  11 Sep 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Fixed missing
  check in autouse function. Fixed out-of-bounds exception on catpkgsplit
  tuple access in vardbapi.move_ent. Changed to manual stat calls in cacheddir.

  10 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Removed the
  circular deps of vardbapi and config.

*portage-2.0.51_pre21 (09 Sep 2004): Fixes and stuff.

  09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Possible fix
  for autouse() that will prevent recursion and locks.
  
*portage-2.0.51_pre210 (09 Sep 2004): (pre-pre release for 21)
  
  09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> archive-conf: Added patch
  so that it runs.
  
  09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> dispatch-conf: Added patch
  to die when rcs isn't installed but is required by options.
  
  09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Solar's checks
  for suid bind issues.
  
  09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> fixvardbentries: Updated
  to Jason's current script.
  